<resources>
    <string name="app_name">Json Kotlin</string>
    <string name="id">ID:</string>
    <string name="userid">UserID</string>
    <string name="email">Email:</string>
    <string name="user_office_number">User Office Number</string>
    <string name="office_number">Office Number:</string>
    <string name="user_mobile_number">User Mobile Number</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="user_height">UserHeight</string>
    <string name="height">Height:</string>
    <string name="user_weight">UserWeight</string>
    <string name="weight">Weight:</string>
    <string name="user_gender">UserGender</string>
    <string name="gender">Gender:</string>
    <string name="user_email">UserEmail</string>
    <string name="user_name">User Name:</string>
    <string name="username">userName</string>
</resources>