<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userid"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_user_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_gender"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_user_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_weight"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_user_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_height"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_user_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_mobile_number"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office_number"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_user_office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_office_number"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
            </LinearLayout>

        </LinearLayout>
</androidx.cardview.widget.CardView>